--- a/.github/workflows/test-mac-sign.yaml
+++ b/.github/workflows/test-mac-sign.yaml
@@ -26,10 +26,4 @@ jobs:
           echo "return 0;}" >> x.cpp
           g++ x.cpp -o x
           chmod +x x
-
-
-      - name: Notarize app
-        run: npx notarize-cli --file "x" --bundle-id "app.kymano"
-        env:
-          NOTARIZE_USERNAME: ${{ secrets.SIGNING_USERNAME }}
-          NOTARIZE_PASSWORD: ${{ secrets.SIGNING_PASSWORD }}
+          xcrun codesign -s "Developer ID Application: Oleg Strelenko (8R3RCB9E9E)" x
