--- a/.github/workflows/build-alpine-qemu-ga.yaml
+++ b/.github/workflows/build-alpine-qemu-ga.yaml
@@ -1,8 +1,8 @@
-name: Linux Full
+name: build-alpine-qemu-ga
 
 on:
   push:
-    tags-ignore:
+    tags:
       - "[0-9]+.[0-9]+.[0-9]+-alpine"
 
 
