--- a/.github/workflows/build-alpine-qemu-ga.yaml
+++ b/.github/workflows/build-alpine-qemu-ga.yaml
@@ -29,8 +29,9 @@ jobs:
         run: |
           docker run --entrypoint /bin/sh --name qemu --platform linux/${{ matrix.arch }} alpine -c "pwd && \
           cd /root/ && \ 
+          mkdir $HOME/QEMU-bin && \
           apk update && \
-          apk add git && \
+          apk add git python3 make ninja gcc g++ musl-dev pkgconfig glib-dev pixman-dev perl && \
           BUILD_PATH=$HOME/QEMU-bin && \
           mkdir bin && \
           git clone git://git.qemu-project.org/qemu.git && \
@@ -39,18 +40,14 @@ jobs:
           git submodule init && \
           git submodule update --recursive && \
           ./configure --prefix=$BUILD_PATH --target-list=x86_64-softmmu --disable-capstone && \
-          echo 'make' && \
-          make && \
-          echo 'make ok' && \
-          make install && \
-          cp /usr/bin/qemu-ga bin/ && \
-          tar -czvf qemu-${{ steps.branch_name.outputs.SOURCE_TAG }}-${{ matrix.platform }}-${{ matrix.arch }}.tgz bin"
+          cd build && \
+          ninja"
 
-          sudo docker cp qemu:/root/qemu-${{ steps.branch_name.outputs.SOURCE_TAG }}-${{ matrix.platform }}-${{ matrix.arch }}.tgz .
+          sudo docker cp qemu:/root/qemu/build/qga/qemu-ga .
 
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            *.tgz
+            qemu-ga
           prerelease: true
