--- a/.github/workflows/build-alpine-qemu-ga.yaml
+++ b/.github/workflows/build-alpine-qemu-ga.yaml
@@ -29,17 +29,14 @@ jobs:
         run: |
           docker run --entrypoint /bin/sh --name qemu --platform linux/${{ matrix.arch }} alpine -c "pwd && \
           cd /root/ && \ 
-          mkdir $HOME/QEMU-bin && \
           apk update && \
           apk add git python3 make ninja gcc g++ musl-dev pkgconfig glib-dev pixman-dev perl && \
-          BUILD_PATH=$HOME/QEMU-bin && \
-          mkdir bin && \
           git clone git://git.qemu-project.org/qemu.git && \
           cd qemu && \
           git reset --hard 44f28df24767cf9dca1ddc9b23157737c4cbb645 && \
           git submodule init && \
           git submodule update --recursive && \
-          ./configure --prefix=$BUILD_PATH --target-list=x86_64-softmmu --disable-capstone && \
+          ./configure --target-list=x86_64-softmmu --disable-capstone && \
           cd build && \
           ninja"
 
